// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InvoiceLineInformation should display info invoice line connected to order line 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="col-xs-12"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.description
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          EDI import invoice line
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.poLineNumber
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <a
            class="root"
            data-test-text-link="true"
            href="/orders/lines/view/2e5067cd-2dc8-4d99-900d-b4518bb6407f"
            rel="noopener noreferrer"
            target="_blank"
          >
            1000-7
          </a>
          <span
            data-test-copy-icon="true"
          >
            <button
              aria-label="clipboard"
              class="iconButton medium"
              icon="clipboard"
              type="button"
            >
              <span
                class="iconButtonInner mediumOffset"
              >
                <span>
                  Icon
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.invoiceLineNumber
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          1
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoice.details.information.status
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          Open
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subscriptionInfo
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span>
            -
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subscriptionStart
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          2021-06-09
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subscriptionEnd
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          2021-06-18
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.comment
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span>
            -
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.accountNumber
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span>
            -
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoice.accountingCode
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span>
            -
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.quantity
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          20
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subTotal
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          $1,523.00
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="checkbox disabled"
        data-test-checkbox="true"
      >
        <label
          class="label label"
          for="checkbox-1"
        >
          <span
            class="inner disabledLabel"
          >
            <input
              aria-invalid="false"
              class="input"
              disabled=""
              id="checkbox-1"
              type="checkbox"
              value=""
            />
            <span
              class="checkboxIcon"
            >
              <svg
                height="10"
                viewBox="0 0 14 14"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.395 4.617L5.63 9.383 3.605 7.358"
                  fill="none"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-miterlimit="10"
                  stroke-width="1.5"
                />
              </svg>
            </span>
            <span
              class="labelText"
            >
              ui-invoice.invoiceLine.releaseEncumbrance
            </span>
          </span>
        </label>
        <div
          role="alert"
        />
      </div>
    </div>
    <div
      class="col-xs-12"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.referenceNumbers
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <div>
            <div
              class="mclContainer"
              style="position: relative; overflow: hidden; height: auto; width: 100%;"
            >
              <div
                aria-live="assertive"
                aria-relevant="additions"
                class="sr-only"
              />
              <div
                aria-rowcount="2"
                class=""
                data-total-count="0"
                id="list-item-reference-numbers"
                role="grid"
                tabindex="0"
              >
                <div
                  class="mclHeaderContainer"
                >
                  <div
                    aria-rowindex="1"
                    class="mclHeaderRow"
                    role="row"
                    style="display: flex; width: 17px;"
                  >
                    <div
                      aria-sort="none"
                      class="mclHeader"
                      id="list-column-refnumber"
                      role="columnheader"
                      style="flex: 0 0 auto;"
                    >
                      stripes-acq-components.referenceNumbers.refNumber
                    </div>
                    <div
                      aria-sort="none"
                      class="mclHeader"
                      id="list-column-refnumbertype"
                      role="columnheader"
                      style="flex: 0 0 auto;"
                    >
                      stripes-acq-components.referenceNumbers.refNumberType
                    </div>
                  </div>
                </div>
                <div
                  class="mclScrollable"
                  style="position: static; width: 100%;"
                  tabindex="0"
                >
                  <div
                    class="mclRowContainer"
                    role="rowgroup"
                    style="position: static;"
                  >
                    <div
                      aria-rowindex="2"
                      class="mclRowFormatterContainer"
                      data-row-index="row-0"
                      role="row"
                      style="position: static;"
                    >
                      <div
                        class="mclRow mclIsOdd"
                        data-row-inner="0"
                        style="min-width: 0px;"
                      >
                        <div
                          class="mclCell mclCellStyle"
                          role="gridcell"
                        >
                          9992
                        </div>
                        <div
                          class="mclCell mclCellStyle"
                          role="gridcell"
                        >
                          type
                        </div>
                      </div>
                    </div>
                    <div
                      class="mclEndOfListContainer"
                      data-end-of-list="1"
                    >
                      <div
                        class="mclCenteredContainer"
                        style="visibility: hidden; height: 0px; padding: 0px; width: 0px;"
                      >
                        <div
                          class="textCentered"
                          data-test-layout="true"
                        >
                          <div
                            class="mclEndOfList"
                            data-test-layout="true"
                          >
                            <span>
                              Icon
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InvoiceLineInformation should display info invoice line not connected to order line 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="col-xs-12"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.description
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          EDI import invoice line
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.poLineNumber
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span>
            -
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.invoiceLineNumber
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          1
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoice.details.information.status
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          Open
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subscriptionInfo
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span>
            -
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subscriptionStart
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          2021-06-09
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subscriptionEnd
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          2021-06-18
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.comment
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span>
            -
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.accountNumber
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span>
            -
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoice.accountingCode
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <span>
            -
          </span>
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.quantity
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          20
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.subTotal
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          $1,523.00
        </div>
      </div>
    </div>
    <div
      class="col-xs-3"
    >
      <div
        class="checkbox disabled"
        data-test-checkbox="true"
      >
        <label
          class="label label"
          for="checkbox-2"
        >
          <span
            class="inner disabledLabel"
          >
            <input
              aria-invalid="false"
              class="input"
              disabled=""
              id="checkbox-2"
              type="checkbox"
              value=""
            />
            <span
              class="checkboxIcon"
            >
              <svg
                height="10"
                viewBox="0 0 14 14"
                width="10"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.395 4.617L5.63 9.383 3.605 7.358"
                  fill="none"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-miterlimit="10"
                  stroke-width="1.5"
                />
              </svg>
            </span>
            <span
              class="labelText"
            >
              ui-invoice.invoiceLine.releaseEncumbrance
            </span>
          </span>
        </label>
        <div
          role="alert"
        />
      </div>
    </div>
    <div
      class="col-xs-12"
    >
      <div
        class="kvRoot"
      >
        <div
          class="kvLabel"
        >
          ui-invoice.invoiceLine.referenceNumbers
        </div>
        <div
          class="kvValue"
          data-test-kv-value="true"
        >
          <div>
            <div
              class="mclContainer"
              style="position: relative; overflow: hidden; height: auto; width: 100%;"
            >
              <div
                aria-live="assertive"
                aria-relevant="additions"
                class="sr-only"
              />
              <div
                aria-rowcount="2"
                class=""
                data-total-count="0"
                id="list-item-reference-numbers"
                role="grid"
                tabindex="0"
              >
                <div
                  class="mclHeaderContainer"
                >
                  <div
                    aria-rowindex="1"
                    class="mclHeaderRow"
                    role="row"
                    style="display: flex; width: 17px;"
                  >
                    <div
                      aria-sort="none"
                      class="mclHeader"
                      id="list-column-refnumber"
                      role="columnheader"
                      style="flex: 0 0 auto;"
                    >
                      stripes-acq-components.referenceNumbers.refNumber
                    </div>
                    <div
                      aria-sort="none"
                      class="mclHeader"
                      id="list-column-refnumbertype"
                      role="columnheader"
                      style="flex: 0 0 auto;"
                    >
                      stripes-acq-components.referenceNumbers.refNumberType
                    </div>
                  </div>
                </div>
                <div
                  class="mclScrollable"
                  style="position: static; width: 100%;"
                  tabindex="0"
                >
                  <div
                    class="mclRowContainer"
                    role="rowgroup"
                    style="position: static;"
                  >
                    <div
                      aria-rowindex="2"
                      class="mclRowFormatterContainer"
                      data-row-index="row-0"
                      role="row"
                      style="position: static;"
                    >
                      <div
                        class="mclRow mclIsOdd"
                        data-row-inner="0"
                        style="min-width: 0px;"
                      >
                        <div
                          class="mclCell mclCellStyle"
                          role="gridcell"
                        >
                          9992
                        </div>
                        <div
                          class="mclCell mclCellStyle"
                          role="gridcell"
                        >
                          type
                        </div>
                      </div>
                    </div>
                    <div
                      class="mclEndOfListContainer"
                      data-end-of-list="1"
                    >
                      <div
                        class="mclCenteredContainer"
                        style="visibility: hidden; height: 0px; padding: 0px; width: 0px;"
                      >
                        <div
                          class="textCentered"
                          data-test-layout="true"
                        >
                          <div
                            class="mclEndOfList"
                            data-test-layout="true"
                          >
                            <span>
                              Icon
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
